--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,8 @@
+@import 'fonts.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,68 +10,116 @@
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 222.2 47.4% 11.2%;
+
+    --primary: #05bcdb;
     --primary-foreground: 210 40% 98%;
- 
-    --secondary: 210 40% 96.1%;
+
+    --secondary: #010829;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
- 
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
+/* .burger-menu_animate {
+  @apply relative h-14 w-[80%] bg-[linear-gradient(75deg,var(--secondary)_10%,var(--primary)_80%)] transition-all duration-300 ease-in-out;
+}
+/* .burger-menu_animate::after {
+  content: '';
+  @apply absolute left-0 top-0 h-full w-full bg-[linear-gradient(75deg,var(--secondary)_0%,var(--primary)_80%)] opacity-0 transition-opacity duration-300 ease-in-out;
+} */
+/* .burger-menu_animate::before {
+  content: '';
+  @apply absolute left-[0] top-[0]
+  block
+  h-full
+  w-full
+  bg-[linear-gradient(75deg,var(--secondary)_0%,var(--primary)_80%)]
+  opacity-0
+  [border-radius:inherit]
+  [transition:opacity_.3s];
+}
+.burger-menu_animate:hover::before {
+  @apply opacity-100;
+}
+.burger-menu_animate:hover {
+  @apply translate-x-4 scale-110;
+}  */
+.burger-menu_animate {
+  @apply relative h-14 w-[80%] bg-[linear-gradient(75deg,var(--secondary)_10%,var(--primary)_80%)] transition-all duration-300 ease-in-out;
+  z-index: 0;
+}
+
+/* Стиль псевдоэлемента */
+.burger-menu_animate::after {
+  content: '';
+  @apply [border-radius:inherit] absolute top-0 left-0 w-full h-full bg-[linear-gradient(75deg,var(--secondary)_0%,var(--primary)_70%)] opacity-0 transition-opacity duration-300 ease-in-out;
+  z-index: -1;
+}
+
+.burger-menu_animate:hover::after {
+  @apply opacity-100;
+}
+
+.burger-menu_animate:hover {
+  @apply translate-x-4 scale-110;
+}
+
 @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
+  }
+  html {
+    font-family: 'Montserrat Alternates';
+    font-weight: 400;
   }
 }
